# CSO-Catweb-Standards

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
approved/: index.html
cso/: index.html
cso/Prefixes/: index.html
cso/Tags/: index.html
docs/: CNAME
docs/cso/: .pages  Prefixes.md  Tags.md
docs/management/: cso-401.md
docs/naming/: cso-301.md
management/cso-401/: index.html
naming/: index.html
naming/cso-301/: index.html
overrides/partials/: footer.html
scripting/: index.html
search/: search_index.json
ui/: index.html
