[project]
name = "cso-catweb-standards"
version = "1.0.0"
description = ""
authors = [
    {name = "TRC Loop",email = "ak@stellar-code.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material (>=9.6.23,<10.0.0)",
    "mkdocs-awesome-pages-plugin (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
